Fixed responsive issues
Fixed issue on full width image being too wide for desktop.
Fixed issue on headshots being too narrow on mobile

--- a/css/snapp-automotive.webflow.css
+++ b/css/snapp-automotive.webflow.css
@@ -434,6 +434,11 @@ strong {
   grid-template-rows: auto;
 }
 
+.container.center.fade-in-1st {
+  margin-right: auto;
+  margin-left: auto;
+}
+
 .container.module {
   display: -ms-grid;
   display: grid;
@@ -1344,6 +1349,7 @@ strong {
   width: 50vw;
   height: 100vh;
   min-width: 912px;
+  margin-left: 0px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -webkit-flex-direction: column;
@@ -6179,8 +6185,9 @@ strong {
   }
 
   .image-scaled {
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
+    max-width: none;
   }
 
   .link-black-outline:hover {
@@ -7612,14 +7619,33 @@ strong {
     grid-row-gap: 72px;
   }
 
+  .image-cover {
+    height: auto;
+    min-width: 100%;
+  }
+
   .no-padding {
     padding: 0px;
   }
 
   .image-module-top {
+    position: relative;
+    left: auto;
+    right: auto;
+    width: auto;
     margin-top: -24px;
     margin-right: -24px;
     margin-left: -24px;
+    -webkit-align-self: stretch;
+    -ms-flex-item-align: stretch;
+    -ms-grid-row-align: stretch;
+    align-self: stretch;
+    -webkit-box-flex: 1;
+    -webkit-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+    -o-object-fit: fill;
+    object-fit: fill;
   }
 
   .image-module-top.more-space {
